# rust-rocket-workshop

./: .travis.yml  Cargo.toml  README.md  README.txt  Rocket.toml
src/: app.rs  b.rs  customer.rs  customer_config.rs  domain.rs  gateway.rs  id.rs  id_config.rs  infrastructure.rs  lib.rs  main.rs
src/domain/: customer.rs  id.rs  mod.rs
src/domain/id/: id.rs
src/gateway/: customer.rs  error.rs  mod.rs  regex.rs
src/infrastructure/: app_config.rs  customer_config.rs  id_config.rs
tests/: integration_tests.rs
